<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
<!--    <parent>-->
<!--        <groupId>org.springframework.boot</groupId>-->
<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
<!--        <version>4.0.0</version>-->
<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
<!--    </parent>-->

    <groupId>com.miko</groupId>
    <artifactId>simbot</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>simbot-starter</module>
        <module>simbot-robot</module>
        <module>simbot-web</module>
        <module>simbot-common</module>
    </modules>

    <properties>
        <miko.version>1.0</miko.version>
        <lombok.version>1.18.42</lombok.version>
        <mybatis.version>4.0.1</mybatis.version>
        <sqlite.version>3.51.1.0</sqlite.version>
        <druid.version>1.2.27</druid.version>
        <jsoup.version>1.21.2</jsoup.version>
        <httpclient.version>5.6</httpclient.version>
        <okhttp.version>5.3.2</okhttp.version>
        <httputil.version>0.6.0</httputil.version>
        <fastjson.version>2.0.33</fastjson.version>
        <snakeyaml.version>2.0</snakeyaml.version>
        <simbot.version>4.14.0</simbot.version>
        <onebot.version>1.8.2</onebot.version>
        <ktor.version>2.3.12</ktor.version>

        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- 参照spring-boot-starter-parent的依赖版本-->
        <spring.boot.version>4.0.0</spring.boot.version>
        <mysql.version>9.5.0</mysql.version>
        <mariadb.version>3.5.7</mariadb.version>
        <sqlite-jdbc.version>3.51.1.0</sqlite-jdbc.version>
    </properties>

    <dependencies>
<!--        <dependency>-->
<!--            <groupId>org.springframework.boot</groupId>-->
<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
<!--        </dependency>-->
    </dependencies>

    <dependencyManagement>
        <dependencies>

            <!-- Project model -->
            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-robot</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-common</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-web</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <dependency>
                <groupId>com.miko</groupId>
                <artifactId>simbot-stater</artifactId>
                <version>${miko.version}</version>
            </dependency>

            <!-- SpringBoot的依赖配置-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- spring-boot-starter -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>

            <!-- spring-web -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-webmvc</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>

            <!-- spring-boot-maven-plugin -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>

            <!-- spring-test -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring.boot.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- MySQL driver -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>

            <!-- Mariadb driver -->
            <dependency>
                <groupId>org.mariadb.jdbc</groupId>
                <artifactId>mariadb-java-client</artifactId>
                <version>${mariadb.version}</version>
            </dependency>

            <!-- Redis -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-redis</artifactId>
                <version>${spring-boot-starter.version}</version>
            </dependency>

            <!-- Mybatis -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis.version}</version>
            </dependency>

            <!-- 阿里数据库连接池包 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>

            <!-- 解析YAML -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>

            <!--FastJson2-->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
            <dependency>
                <groupId>org.apache.httpcomponents.client5</groupId>
                <artifactId>httpclient5</artifactId>
                <version>${httpclient.version}</version>
            </dependency>

            <!-- OKHttpUtil -->
            <dependency>
                <groupId>io.github.admin4j</groupId>
                <artifactId>common-http-starter</artifactId>
                <version>${httputil.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>

            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>

            <dependency>
                <groupId>love.forte.simbot</groupId>
                <artifactId>simbot-core-spring-boot-starter</artifactId>
                <version>${simbot.version}</version>
            </dependency>
            <dependency>
                <groupId>love.forte.simbot</groupId>
                <artifactId>simbot-core-jvm</artifactId>
                <version>${simbot.version}</version>
            </dependency>
            <dependency>
                <groupId>love.forte.simbot.component</groupId>
                <artifactId>simbot-component-onebot-v11-core-jvm</artifactId>
                <version>${onebot.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.ktor/ktor-client-java-jvm -->
            <dependency>
                <groupId>io.ktor</groupId>
                <artifactId>ktor-client-java-jvm</artifactId>
                <version>${ktor.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>2.0.0-M1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.volcengine/volcengine-java-sdk-ark-runtime -->
            <dependency>
                <groupId>com.volcengine</groupId>
                <artifactId>volcengine-java-sdk-ark-runtime</artifactId>
                <version>1.0.3</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.12.7.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>